--- a/robotni/robotni-react/public/index.html
+++ b/robotni/robotni-react/public/index.html
@@ -11,10 +11,10 @@
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Robotni</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Welcome to our plant app.</noscript>
     <div id="root"></div>
   </body>
 </html>
